# allumette

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindLibRaw.cmake
data/conf/: defaults.json
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/lib/: AImage.cpp  AImage.h  AllumetteEngine.cpp  AllumetteEngine.h  AllumetteStacker.cpp  AllumetteStacker.h  CMakeLists.txt  EImage.cpp  EImage.h  ImageLoader.cpp  ImageLoader.h  SourceFrame.cpp  SourceFrame.h  SourceImage.cpp  SourceImage.h  Stacker.cpp  Stacker.h  StackerBuffer.cpp  StackerBuffer.h
test/akarsh_m3/: RAW_FILES_README.md  allumette_config.json  short.json
